welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:23: error: expected class or object definition
def ligne1Fleur(c:Color){
^FlowerPot:29: error: expected class or object definition
def growFlowers(){
^FlowerPot:39: error: Unmatched closing brace '}' ignored here
}
^